# ot-harjoitustyo

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
src/: constants.py  graphics.py  main.py  sprites.py  world.py
src/tests/: world_test.py
